# Fauna

./: LICENSE  README.md  pyproject.toml
config/: default.yaml
scripts/: inference.py
src/data/: augmentation.py  dataset.py  frontend.py
src/model/: budgiformer.py  conformer.py  mae.py  patch_embed.py  tag_head.py
src/tags/: ontology.py  retrieval.py  tags_to_human.py  text_to_tags.py
src/training/: finetune.py  pretrain.py
tests/: test_augmentation.py  test_budgiformer.py  test_conformer.py  test_dataset.py  test_frontend.py  test_model.py  test_ontology.py  test_patch_embed.py  test_retrieval.py  test_tag_head_mae.py  test_tags_to_human.py  test_text_to_tags.py
